Bug 169413 - Filesave: cannot open DOCX with table field
Summary: Filesave: cannot open DOCX with table field
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-SAXParse
  Show dependency treegraph
 
Reported: 2025-11-13 09:03 UTC by Timur
Modified: 2025-12-28 23:33 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
DOCX (20.20 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-11-13 09:03 UTC, Timur
Details
DOCX (46.04 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-11-14 08:31 UTC, Timur
Details
conf_eastAsia.docx: example where w:eastAsiaTheme is duplicated (38.88 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-11-15 20:54 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-11-13 09:03:46 UTC
Created attachment 203939 [details]
DOCX

Open DOCX, save and reopen, shows repair dialog.

Regression from:
```
commit caecfff1adbe9715260ef9e2009333e523d61123	[log]
author	Justin Luth <justin.luth@collabora.com>	Fri Dec 01 14:16:14 2023 -0500
tdf#108505 writerfilter: fix field direct char settings
Instead of adding characters properties one at a time, lets take care of everything all at once.
```
Comment 1 Timur 2025-11-14 08:31:01 UTC
Created attachment 203966 [details]
DOCX
Comment 2 Justin L 2025-11-15 20:54:00 UTC
Created attachment 204016 [details]
conf_eastAsia.docx: example where w:eastAsiaTheme is duplicated
Comment 3 Commit Notification 2025-11-15 22:53:57 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9e8211b1c2a814880c0108b2122a6085be192b82

tdf#169413 docx export: don't write themes twice in w:rFonts

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-11-17 08:40:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/019cfd97f73618258fd18470609a4f874d6c7cbf

tdf#169413 docx export: don't write themes twice in w:rFonts

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gabor Kelemen (Collabora) 2025-11-17 15:53:57 UTC
Tested with todays nightly 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 24; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

No repair dialog after save as docx and reload; or after reload in Word 2016.
Comment 6 Piotr Osada 2025-12-28 23:28:37 UTC
Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded

25.8.1 displays the repair dialog, but the current 25.8.4 does not.


Version: 25.8.4.2 (X86_64)
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (pl_PL); UI: en-US
Calc: CL threaded



But is this below behavior a bug?

Steps with attachment 204016 [details]

content: Figure 1 - Work plan structure

1) Writer: open, type space, save, close file
2) Writer: open, del  space, save, close file
3) Writer: open

Result:
Text content is missing.
But in Word "Figure 1 - Work plan structure" text is still present.
After save in MS Word text in LO Writer is still missing.