sw/qa/extras/ooxmlexport/ooxmlexport25.cxx
@@ -83,6 +83,13 @@ DECLARE_OOXMLEXPORT_TEST(testTdf165478_bottomAligned, "tdf165478_bottomAligned.d
     CPPUNIT_ASSERT_EQUAL(nCellBottom, nTextBottom);
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf169413_asciiTheme)
+{
+    // the document failed to reload without errors after a round-trip
+    createSwDoc("tdf169413_asciiTheme.docx");
+    saveAndReload(mpFilter);
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testTdf166620)
 {
     createSwDoc();
